syntax = "proto3";

package pools;

option go_package = "a.yandex-team.ru/cloud/disk_manager/internal/pkg/services/pools/protos";

////////////////////////////////////////////////////////////////////////////////

message RetireBaseDisksRequest {
    string ImageId = 1;
    string ZoneId = 2;
    bool UseBaseDiskAsSrc = 3;
}

message RetireBaseDisksTaskState {
    RetireBaseDisksRequest Request = 1;
    repeated string BaseDiskIds = 2;
}
